# tangent-notebook

./: .gitignore  DEPLOYMENT.md  FIX_CERTIFICATE.md  HTTPS_FIX.md  IMPROVEMENTS.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml
assets/: index.39278a0a.css  index.6ebc8397.js  index.9cd46eef.js  index.e2cbaf01.css
frontend/: package-lock.json  package.json
frontend/src/: App.svelte
frontend/src-tauri/: Cargo.toml
frontend/src-tauri/src/: lib.rs
frontend/src/lib/components/: ChatSidebar.svelte
frontend/src/lib/stores/: notebook.ts
public/: CNAME
public/sample-notebooks/: climate-ecology-data-template.js
src/: App.svelte  style.css
src-tauri/: tauri.conf.json
src/lib/components/: AISettings.svelte  Cell.svelte  CellOutput.svelte  ChatSidebar.svelte  CommandPalette.svelte  ExportDialog.svelte  MonacoEditor.svelte  Notebook.svelte  RightSidebar.svelte  Sidebar.svelte
src/lib/types/: notebook.ts
src/lib/utils/: aiService.ts  exportService.ts  jsExecutor.ts  libraryHelpers.ts  notebookFormat.ts  tauriFileSystem.ts
